// TechMarket — OLTP schema (MySQL target)
// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table customers {
  id uuid [primary key, note: 'UUID; зберігати як CHAR(36) у MySQL']
  first_name varchar
  last_name varchar
  email varchar [unique]
  phone varchar
  created_at datetime
  updated_at datetime
}

Table regions {
  id uuid [primary key]
  name varchar
  code varchar [unique, note: 'Код регіону']
}

Table employees {
  id uuid [primary key]
  first_name varchar
  last_name varchar
  email varchar [unique]
  hired_at date
  is_manager boolean [note: 'Флаг керівника']
  region_id uuid [ref: > regions.id, note: 'Регіон відповідальності']
}

Table categories {
  id uuid [primary key]
  name varchar
  parent_category_id uuid [ref: > categories.id, note: 'Nullable; ієрархія категорій']

  Indexes {
    (name) [unique]
  }
}

Table products {
  id uuid [primary key]
  name varchar
  sku varchar [unique, note: 'Артикул']
  category_id uuid [ref: > categories.id]
  price decimal [note: 'Ціна продажу']
  cost decimal [note: 'Собівартість']
  status varchar [note: 'active/inactive']
  created_at datetime
  updated_at datetime

  Indexes {
    (category_id)
  }
}

Table orders {
  id uuid [primary key]
  customer_id uuid [ref: > customers.id]
  employee_id uuid [ref: > employees.id]
  region_id uuid [ref: > regions.id]
  order_date datetime
  status varchar [note: 'new, paid, shipped, cancelled']
  total_amount decimal
  created_at datetime
  updated_at datetime

  Indexes {
    (customer_id) [name: 'order_customer_idx']
    (employee_id) [name: 'order_employee_idx']
    (region_id) [name: 'order_region_idx']
    (order_date) [name: 'order_date_idx']
  }
}

Table order_items {
  id uuid [primary key]
  order_id uuid [ref: > orders.id]
  product_id uuid [ref: > products.id]
  quantity integer
  unit_price decimal
  discount decimal [note: 'Знижка на позицію (грошима або часткою)']

  Indexes {
    (order_id) [name: 'oi_order_idx']
    (product_id) [name: 'oi_product_idx']
  }
}

Table payments {
  id uuid [primary key]
  order_id uuid [ref: > orders.id]
  method varchar [note: 'card, paypal, etc.']
  paid_at datetime
  amount decimal

  Indexes {
    (order_id)
  }
}

// --- Authentication & Authorization (bcrypt + Bearer tokens) ---

Table auth_users {
  id uuid [primary key]
  email varchar [unique, note: 'Логін користувача']
  status varchar [note: 'active, disabled, blocked']
  created_at datetime
  updated_at datetime
  // Опціональні зв'язки з бізнес-сутностями
  customer_id uuid [ref: - customers.id, note: 'Nullable: привʼязка до клієнта']
  employee_id uuid [ref: - employees.id, note: 'Nullable: привʼязка до співробітника']
}

Table auth_credentials {
  id uuid [primary key]
  user_id uuid [ref: > auth_users.id, unique]
  password_hash varchar [note: 'bcrypt hash (включає salt усередині PHC)']
  algo varchar [note: 'bcrypt']
  password_updated_at datetime
  updated_at datetime
}

Table auth_tokens {
  id uuid [primary key]
  user_id uuid [ref: > auth_users.id]
  token_hash varchar [note: 'SHA-256 від Bearer токена']
  issued_at datetime
  expires_at datetime
  revoked boolean
  last_used_at datetime
  user_agent varchar
  ip varchar
  scopes varchar [note: 'Опціонально: перелік scope через кому']

  Indexes {
    (user_id)
    (token_hash) [unique]
    (expires_at)
  }
}

Table roles {
  id uuid [primary key]
  name varchar [unique, note: 'ADMIN, SALES, CUSTOMER, BI_VIEWER']
  comment varchar
}

Table user_roles {
  user_id uuid [ref: > auth_users.id]
  role_id uuid [ref: > roles.id]

  Indexes {
    (user_id, role_id) [unique]
    (role_id)
  }
}
